# garl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .dockerignore  .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: a2a.py  routes.py
backend/app/core/: config.py  signing.py  supabase_client.py
backend/app/models/: a2a_schemas.py  (+1 more)
backend/scripts/: run_seed_sql.py  seed_agents.py  seed_direct.py
backend/tests/: conftest.py  test_a2a.py  test_reputation.py  test_routes.py  test_security.py  test_signing.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/public/: llms-full.txt  llms.txt  manifest.json  robots.txt
integrations/: INTEGRATION.md  mcporter-config.json
integrations/garl-reputation/: SKILL.md  claw.json
integrations/github-action/: README.md  action.yml
integrations/langchain/: README.md  garl_callback.py
integrations/mcp-server/: README.md  package-lock.json  package.json  server.json
integrations/templates/: AGENTS.md  TOOLS.md
scripts/: mock_run.py  security-test.sh
sdks/javascript/: README.md  garl.js  package.json
sdks/python/: README.md  garl.py  pyproject.toml  setup.py
supabase/: schema.sql
supabase/migrations/: 20260222_init.sql  20260223_mcp_a2a_update.sql  20260224_v02_major_update.sql  20260225_v03_ema_immutable.sql  20260226_v04_trust_platform.sql  20260228_v10_sovereign_trust.sql  20260229_sandbox_mechanism.sql
(+24 files in other folders)
